--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Login</title>
         <meta name="viewport" content="width=device-width, initial-sclae=1.0">
-        <link rel="icon" type="image/x-icon" href="/assets/login-icon.ico">
+        <link rel="icon" type="image/x-icon" href="assets/login-icon.ico">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap');
             
